# routes/shops.js
@@ -5,7 +5,7 @@ const checkRole = require('../middleware/checkRole');
 
 // API shops hanya bisa diakses admin/superadmin a.k.a role member gabisa
 // get dan searc bisa diakses semua role
-router.get('/', Auth, shopController.getShops)
+router.get('/', shopController.getShops)
 router.get('/search',Auth, shopController.searchShops)
 router.get('/:id',Auth, shopController.getShopById)
 router.put('/:id',Auth, shopController.editShop)
